# network_ops

./: .gitignore  TTP模板用法说明.md  device_list.csv  main.py  manage.py  pyproject.toml  start_services.py
cmdb/: admin.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
cmdb/migrations/: 0001_initial.py  0002_remove_device_created_at_remove_device_updated_at_and_more.py  0003_deviceconfig.py  0004_device_parsed_config.py  0005_remove_device_parsed_config_and_more.py  0006_rename_config_deviceconfig_config_text_and_more.py  0007_deviceconfig_interface_json.py  0008_deviceconfig_node_json_deviceconfig_pool_json_and_more.py  0009_irule_persist_pool_poolmember_profile_snat_and_more.py  0010_alter_irule_options_alter_persist_options_and_more.py  0011_virtualserver_mask_virtualserver_protocol_and_more.py  0012_alter_virtualserver_persist.py  0013_interface.py  0014_rename_virtualserver_ltmvirtualserver.py  0015_rename_pool_ltmpool.py  0016_rename_irule_ltmirule_rename_persist_ltmpersist_and_more.py  0017_gtmdatacenter_gtmpool_gtmwideip.py  0018_alter_gtmwideip_options_gtmwideip_idx_wideip_name_and_more.py  0019_remove_deviceconfig_interface_json_and_more.py  0020_rename_shutdown_interface_enabled.py  0021_deviceconfig_latest.py  0022_remove_deviceconfig_idx_config_latest_and_more.py  (+1 more)
frontend/: components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
netmiko_api/: config_routes.py  device_models.py  netmiko_service.py
netops/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
templates/: index.html
(+152 files in other folders)
